tests/valid/trait/method_call_short_ufcs_generic_empty_enum_constructor_receiver.facet
enum Job<T> {
  Ready
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (Runner::run Job<unrestricted isize>::Ready())
}
