tests/invalid/trait/method_call_short_ufcs_enum_constructor_receiver_safety_gate.facet
enum Job {
  Ready(unrestricted isize)
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (Runner::run Job::Ready(1))
}
